--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1024px;height:768px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?49602"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?45582"></script>
 	</div>
 
 	<!-- end copy -->
@@ -55,9 +55,11 @@
 		<div>1000</div>
 		<div>ANSWER D, ANSWER D, ANSWER D, ANSWER D</div>
 		<div>ANSWER E, ANSWER E, ANSWER E, ANSWER E</div>
+		<div>CONTINUE</div>
 		<div>QUESTION QUESTION QUESTION QUESTION QUESTION
 QUESTION QUESTION QUESTION QUESTION QUESTION
 </div>
+		<div>-1000</div>
 		<div>ANSWER B, ANSWER B, ANSWER B, ANSWER B</div>
 		<div>ANSWER A, ANSWER A, ANSWER A, ANSWER A</div>
 		<div>950</div>
